namespace ZAMB.Settings
{
    /// <summary>
    /// Const values, mostly for string names, to prevent trouble when changing names is required.
    /// </summary>
    public static class Consts
    {
        public const string MoveValue = "MoveValue";
        public const string Grounded = "Grounded";
        public const string ToStandard = "ToStandard";
        public const string ToRifle = "ToRifle";
        public const string Aim = "Aim";
        public const string Shoot = "Shoot";
    }
}
